--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ classifiers = [
     "Topic :: Software Development :: Testing",
 ]
 requires-python = ">= 3.8"
+dependencies = [
+    "coverage >= 5.0",
+]
 dynamic = [
     "version",
 ]
