Change flake8 → Ruff

--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,7 @@ isolated_build = True
 [testenv]
 deps =
     coverage[toml] >= 5.0
-    flake8 >= 3.8
-    flake8-bugbear
+    ruff
     mypy
 commands =
 # test
@@ -15,7 +14,7 @@ commands =
     coverage run --source=primula -m unittest discover -s tests {posargs}
     coverage report
 # lint
-    flake8
+    ruff check
 # type
     mypy primula
 
