--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,3 +79,30 @@ disable_error_code = [
     "attr-defined",
     "misc",
 ]
+
+[tool.ruff]
+extend-exclude = [
+    "vim-*",
+]
+line-length = 160
+
+[tool.ruff.lint]
+select = [
+    "E",
+    "W",
+    "F",
+    "UP",
+    "B0",
+    "C4",
+]
+ignore = [
+    "E74",
+]
+
+[tool.ruff.lint.per-file-ignores]
+"primula/__init__.py" = [
+    "F403",
+]
+
+[tool.ruff.lint.pyupgrade]
+keep-runtime-typing = true
