--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-    "setuptools >= 61.0",
+    "setuptools >= 77.0",
     "scmver[toml] >= 1.7",
 ]
 build-backend = "setuptools.build_meta"
@@ -12,11 +12,10 @@ readme = "README.rst"
 authors = [
     {name = "Akinori Hattori", email = "hattya@gmail.com"},
 ]
-license = {text = "ALv2"}
+license = "Apache-2.0"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
